@@ -33,3 +33,11 @@
 #define RTLD_SINGLE_THREAD_P \
   __builtin_expect (THREAD_GETMEM (THREAD_SELF, \
 				   header.multiple_threads) == 0, 1)
+
+static inline
+uintptr_t __pthread_get_pc (const struct ucontext *uc)
+{
+  return uc->uc_mcontext.sc_ip;
+}
+
+#define sigaddset_cancel(set) __sigaddset ((sigset_t *) (set), SIGCANCEL)
